--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,16 @@
         <p class="subtitle">Share this code with your friends!</p>
       </div>
 
+      <div class="game-settings" id="gameSettingsSection" style="display: none;">
+        <h3>Game Settings</h3>
+        <div class="pack-selection">
+          <label>Select Card Packs:</label>
+          <div id="packList" class="pack-list">
+            <!-- Packs will be rendered here -->
+          </div>
+        </div>
+      </div>
+
       <div class="players-waiting">
         <h3>Players (<span id="playerCount">0</span>)</h3>
         <ul id="playerList" class="player-list"></ul>
