feat: Implement initial client UI, server game engine, and socket handlers, and add nodemon for development.

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
         <button class="secondary" style="margin-top: 0;">🎴 Create Custom Cards</button>
       </a>
 
-      <div id="errorMessage" class="status-message error-message" style="display: none;"></div>
+      <div id="errorMessage" class="status-message error-message"></div>
     </div>
 
     <!-- LOBBY SCREEN -->
