feat: Add initial client-side UI, styling, and server-side game engine.

--- a/public/index.html
+++ b/public/index.html
@@ -115,6 +115,7 @@
       <div id="gameOverSection" class="game-over-screen" style="display: none;">
         <div class="emoji-celebration">🎉</div>
         <div class="winner-announcement" id="gameWinnerName">Player Won!</div>
+        <div id="leaderboardContainer"></div>
         <button id="newGameBtn">Back to Home</button>
       </div>
 
