feat: Implement core game engine, initial client-side UI, and game data structure.

--- a/public/index.html
+++ b/public/index.html
@@ -80,8 +80,7 @@
       <div class="game-header">
         <div class="round-info">Round <span id="roundNumber">1</span></div>
         <div class="czar-indicator" id="czarIndicator">Czar: ---</div>
-        <button id="leaveGameBtn" class="secondary"
-          style="width: auto; padding: 0.5rem 1rem; margin: 0; font-size: 0.9rem;">Leave Game</button>
+        <button id="leaveGameBtn" class="secondary">Leave Game</button>
       </div>
 
       <div class="scoreboard" id="scoreboard"></div>
