--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,10 @@
         <ul id="playerList" class="player-list"></ul>
       </div>
 
-      <button id="startGameBtn">Start Game</button>
+      <div class="lobby-actions">
+        <button id="startGameBtn">Start Game</button>
+        <button id="leaveLobbyBtn" class="secondary">Leave Room</button>
+      </div>
       <p class="subtitle">Need at least 2 players to start</p>
     </div>
 
