feat: implement initial client-side UI for game rendering and interaction.

--- a/public/index.html
+++ b/public/index.html
@@ -150,6 +150,9 @@
       <div id="submissionsSection" style="display: none;">
         <h3 class="white-cards-label">Pick the Funniest Answer!</h3>
         <div id="submissionsGrid" class="submissions-grid"></div>
+        <button id="selectWinnerBtn" class="primary" style="display: none; margin-top: 1.5rem;">
+          🏆 Select This Winner
+        </button>
       </div>
 
       <!-- Round Winner Display -->
